Rename Safety App to DASY

--- a/backend/src/main/resources/emails/layout.html
+++ b/backend/src/main/resources/emails/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Safety App</title>
+    <title>DASY App</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -13,7 +13,7 @@
 </p>
 <p>
     Regards,<br>
-    Safety App
+    DASY App
 </p>
 </body>
 </html>
