--- a/backend/src/main/resources/emails/new-observation.html
+++ b/backend/src/main/resources/emails/new-observation.html
@@ -2,9 +2,7 @@
 <html layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 <body>
 <div layout:fragment="~{text-content-en}">
-    You have requested to create an account on the DASY App registration site.
-    <br/>
-    If you did not do this, ignore this mail.
+    A new observation has been recorded.
 </div>
 </body>
 </html>
