--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="robots" content="noindex,follow" />
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
-    <title>Safety App</title>
+    <title>DASY</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
